Archive2/7e/de14f078313e37/output
main.cpp: In function 'int main()':
main.cpp:22:5: error: redefinition of 'int main()'
 int main (void)
     ^
main.cpp:3:5: note: 'int main()' previously defined here
 int main (void)
     ^
main.cpp:24:9: warning: unused variable 'perimetro' [-Wunused-variable]
   float perimetro=0;
         ^
